Connection and Configuration revamp.